re-init'd project: renamed app, removed expo modules

--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -1,3 +1,3 @@
 <resources>
-    <string name="app_name">clear-for-reddit</string>
+    <string name="app_name">ClearForReddit</string>
 </resources>
